Gtk-3.20&3.22&4.0: [BriskMenuApplet] Add some outer margins for childs to prevent gapless placements
In our generic GtkMenuItem disign, L/R gapless container is correct,
but Brisk has multiple paned containers...

So let's switch to our Cinnamon-menu-like design with slight margins.

--- a/gtk/sass/4.0/_3rd-party.scss
+++ b/gtk/sass/4.0/_3rd-party.scss
@@ -2857,7 +2857,17 @@ PanelToplevel.mate-panel-menu-bar > grid.horizontal > button {
 .brisk-menu {
   border-top: 1px solid $menu_highlight_color;
 
+  entry { margin: rem(4px); } // search-entry
+
+  box.horizontal scrolledwindow { // right-pane
+    &:dir(ltr) { margin: rem(4px) rem(4px) rem(4px) 0; }
+    &:dir(rtl) { margin: rem(4px) 0 rem(4px) rem(4px); }
+  }
+
   .categories-list { // left-pane
+    &:dir(ltr) { margin: rem(4px) 0 rem(4px) rem(4px); }
+    &:dir(rtl) { margin: rem(4px) rem(4px) rem(4px) 0; }
+
     button.flat {
       padding-top: unset;
       padding-bottom: unset;
